--- a/app/src/main/res/layout/right_message_item.xml
+++ b/app/src/main/res/layout/right_message_item.xml
@@ -1,45 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="2dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="2dp">
+    android:gravity="end||bottom"
+    android:orientation="horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
 
     <TextView
-        android:id="@+id/right_message_text"
+        android:id="@+id/sending"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_message_text"
-        android:maxWidth="280dp"
-        android:text="Hello world!"
-        android:paddingStart="12dp"
-        android:paddingTop="4dp"
-        android:layout_gravity="right"
-        android:paddingEnd="12dp"
-        android:paddingBottom="4dp"
+        android:text="@string/sending"
+        android:layout_marginEnd="8dp"
+        android:textStyle="italic"
+        android:layout_marginBottom="4dp"
         android:textColor="@color/white"
-        android:textSize="18sp"
         android:visibility="gone"
         />
 
-
-    <androidx.cardview.widget.CardView
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="12dp"
-        android:layout_gravity="right"
-        >
-        <ImageView
-            android:id="@+id/right_message_image"
-            android:layout_width="260dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="2dp">
+        <TextView
+            android:id="@+id/right_message_text"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/background_message_text"
             android:maxWidth="280dp"
-            android:src="@drawable/icons_message"
+            android:paddingStart="12dp"
+            android:paddingTop="4dp"
+            android:layout_gravity="end"
+            android:paddingEnd="12dp"
+            android:paddingBottom="4dp"
+            android:textColor="@color/white"
+            android:textSize="18sp"
             android:visibility="gone"
             />
-    </androidx.cardview.widget.CardView>
 
 
-</FrameLayout>
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="12dp"
+            android:layout_gravity="end"
+            >
+            <ImageView
+                android:id="@+id/right_message_image"
+                android:layout_width="260dp"
+                android:layout_height="wrap_content"
+                android:maxWidth="280dp"
+                android:src="@drawable/icons_message"
+                android:visibility="gone"
+                />
+        </androidx.cardview.widget.CardView>
+    </FrameLayout>
+
+</LinearLayout>
