--- a/app/src/main/res/layout/right_message_item.xml
+++ b/app/src/main/res/layout/right_message_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="end||bottom"
+    android:gravity="bottom|end"
     android:orientation="horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
