--- a/app/src/main/res/layout/left_message_item.xml
+++ b/app/src/main/res/layout/left_message_item.xml
@@ -16,6 +16,7 @@
 
 
     <FrameLayout
+        android:id="@+id/left_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
