--- a/app/src/main/res/drawable/react_emoticon_background.xml
+++ b/app/src/main/res/drawable/react_emoticon_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="60dp"/>
-    <solid android:color="#FFFFFF"/>
-    <padding android:right="12dp" android:left="12dp" android:top="4dp" android:bottom="4dp"/>
+    <solid android:color="@color/black_80"/>
+    <padding android:right="16dp" android:left="16dp" android:top="6dp" android:bottom="6dp"/>
 </shape>
