--- a/app/src/main/res/layout/emoticon_popup.xml
+++ b/app/src/main/res/layout/emoticon_popup.xml
@@ -7,6 +7,7 @@
         android:id="@+id/emotion_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:background="@drawable/react_emoticon_background"
         />
 
