--- a/app/src/main/res/layout/left_message_item.xml
+++ b/app/src/main/res/layout/left_message_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,19 +9,23 @@
         android:id="@+id/circle_image"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="6dp"
         android:src="@drawable/icons_message"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
 
     <FrameLayout
         android:id="@+id/left_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="2dp">
+        android:layout_marginBottom="2dp"
+        android:layout_marginStart="4dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/circle_image">
 
         <TextView
             android:id="@+id/left_message_text"
@@ -35,9 +39,10 @@
             android:layout_gravity="left"
             android:paddingEnd="12dp"
             android:paddingBottom="4dp"
+            android:layout_marginBottom="8dp"
             android:textColor="@color/white"
             android:textSize="18sp"
-            android:visibility="gone"
+            android:visibility="visible"
             />
 
 
@@ -45,6 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:cardCornerRadius="12dp"
+            android:layout_marginBottom="8dp"
             android:layout_gravity="left"
             >
             <ImageView
@@ -58,6 +64,27 @@
         </androidx.cardview.widget.CardView>
 
 
-    </FrameLayout>
+        <FrameLayout
+            android:id="@+id/emoticon_frame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:visibility="gone"
+            android:background="@drawable/message_emoticon_background">
+            <ImageView
+                android:id="@+id/emoticon_icon"
+                android:layout_width="14dp"
+                android:layout_height="14dp"
+                android:layout_margin="1dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/left_view"
+                app:layout_constraintTop_toBottomOf="parent"
+                android:src="@drawable/haha"
+                android:visibility="gone"
+                />
+        </FrameLayout>
 
-</LinearLayout>
+
+
+    </FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
